--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,7 @@ url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
+highlighter: rouge
+
 # Build settings
 markdown: kramdown
