--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Philipp Neugebauer's blog
 email: ppn@philippneugebauer.net
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: >
+  Rails enthusiast,
+  Java developer,
+  Database engineer
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://philippneugebauer.net" # the base hostname & protocol for your site
 twitter_username: ppneugebauer
