github comments work now, fixes #1

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
   Java developer,
   Database engineer
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://philippneugebauer.net" # the base hostname & protocol for your site
+url: http://philippneugebauer.net # the base hostname & protocol for your site
 twitter_username: ppneugebauer
 github_username:  philippneugebauer
 
