domain changed to blog.philippneugebauer.net

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
   Java developer,
   Database engineer
 baseurl: ""
-url: http://philippneugebauer.net
+url: http://blog.philippneugebauer.net
 twitter_username: ppneugebauer
 github_username:  philippneugebauer
 
