--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 title: Philipp Neugebauer's developer blog
 email: ppn@philippneugebauer.net
 description: >
-  Rails and Git enthusiast,
-  Database engineer
+  Rails and Git enthusiast
 baseurl: ""
 url: http://blog.philippneugebauer.net
 twitter_username: ppneugebauer
