--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Philipp Neugebauer's blog
 email: ppn@philippneugebauer.net
 description: >
-  Rails and Git enthusiast
+  Whatever's in my mind
 baseurl: ""
 url: http://philippneugebauer.net
 twitter_username: ppneugebauer
