--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -17,17 +17,10 @@ jobs:
         with:
           token: ${{ secrets.TOKEN }}
 
-      - name: Debug
-        run: |
-          echo "Using Ruby version: ${{ env.RUBY_VERSION }}"
-          echo "RUBY_VERSION=${RUBY_VERSION}"
-          echo "RUBY_VERSION=${RUBY_VERSION}" >> $GITHUB_ENV
-          echo "Using Ruby version: ${{ env.RUBY_VERSION }}"
-
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ env.RUBY_VERSION }}
+          ruby-version: 3.3.4
           bundler-cache: true
 
       - name: Install GitHub Pages dependencies
