--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -21,7 +21,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.3.4
-          bundler-cache: true
+          bundler-cache: false
 
       - name: Install GitHub Pages dependencies
         run: |
